<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="be.multinet.viewmodel.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.HomeFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="54dp"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_person_24px" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="4dp"
            android:max="@{viewModel.maxExperienceForLevel}"
            android:padding="10dp"
            android:progress="@{viewModel.userProgress}"
            android:progressDrawable="@drawable/indeterminate_progressbar_circle"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.userLevelAsString}"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="@id/progressBar"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@id/progressBar"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/rewardAtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.nextRewardAt}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userLevelLabel" />

        <TextView
            android:id="@+id/leaderboardLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/leaderboard_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rewardAtLabel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/leaderboardHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/leaderboardLabel">

            <TextView
                android:id="@+id/leaderboard_place"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_place_text"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/leaderboard_name"
                app:layout_constraintEnd_toStartOf="@+id/leaderboard_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/leaderboard_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_name_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/leaderboard_score"
                app:layout_constraintStart_toEndOf="@+id/leaderboard_place"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/leaderboard_score"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_score_text"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/leaderboard_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/leaderboard_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaderboardHeaderLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


